--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-modal": "^3.8.1",
     "react-scripts": "3.0.1",
     "styled-components": "^4.2.0"
   },
